Fixed avatar alignement

--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -78,6 +78,7 @@ $top-bar-height: 52px;
 
     &__avatar {
         vertical-align: middle;
+        margin-bottom: 5px;
     }
     
     &__notification-count {
